--- a/lang/Report Module/tr.json
+++ b/lang/Report Module/tr.json
@@ -1,19 +1,22 @@
-{
+﻿{
     "Chat.Prefix": "{darkred}[Discord]{default}",
-    "Menu.ReportSelectPlayer": "Bir Oyuncu Seçin",
-    "Menu.ReportSelectReason": "Bir Neden Seçin",
-    "Menu.ReportCustomReason": "Özel Neden",
+    "Menu.ReportSelectPlayer": "Bir Oyuncu SeÃ§in",
+    "Menu.ReportSelectReason": "Bir Neden SeÃ§in",
+    "Menu.ReportCustomReason": "Ã–zel Neden",
     "Menu.Back": "Geri",
     "Chat.ReportSend": "Oyuncu {0} rapor edildi! (Neden: {1})",
-    "Chat.ReportCancelled": "Raporunuz başarıyla iptal edildi.",
-    "Chat.ReportShortReason": "Nedenin uzunluğu yetersiz",
-    "Chat.ReportBlockedReason": "Sebep {darkred}{0}{default} kelimesini içeremez! Lütfen nedeni tekrar girin. İptal etmek için {green}!cancel yazın",
-    "Chat.ReportNoTargetsFound": "Hedef bulunamadı!",
+    "Chat.ReportCancelled": "Raporunuz baÅŸarÄ±yla iptal edildi.",
+    "Chat.ReportShortReason": "Nedenin uzunluÄŸu yetersiz",
+    "Chat.ReportBlockedReason": "Sebep {darkred}{0}{default} kelimesini iÃ§eremez! LÃ¼tfen nedeni tekrar girin. Ä°ptal etmek iÃ§in {green}!cancel yazÄ±n",
+    "Chat.ReportNoTargetsFound": "Hedef bulunamadÄ±!",
     "Chat.ReportCooldown": "Raporu her {green}{0} saniyede bir {default}kullanabilirsiniz!",
+    "Chat.TargetRecentlyReported": "Oyuncu {darkred}{0}{default} zaten bildirildi! Tekrar bildirmeden önce {green}{1} saniye bekleyin.",
     "Chat.SelfReport": "Kendinizi rapor edemezsiniz!",
-    "Chat.InserYourReason": "Nedeninizi sohbete girin! İptal etmek için, {green}!cancel yazın",
-    "Chat.InvalidReportUsage": "Geçersiz rapor kullanımı! {green}/report <oyuncu> <neden>",
-    "Chat.TargetNotFound": "{green}{0}{default} adında bir oyuncu bulunamadı!",
-    "Chat.TargetNotConnected": "Oyuncu {green}{0}{default} artık bağlı değil!",
-    "Chat.MultipleTargetFound": "Adı {green}{0}{default} olan birden fazla oyuncu bulundu!"
+    "Chat.InserYourReason": "Nedeninizi sohbete girin! Ä°ptal etmek iÃ§in, {green}!cancel yazÄ±n",
+    "Chat.InvalidReportUsage": "GeÃ§ersiz rapor kullanÄ±mÄ±! {green}/report <oyuncu> <neden>",
+    "Chat.TargetNotFound": "{green}{0}{default} adÄ±nda bir oyuncu bulunamadÄ±!",
+    "Chat.TargetNotConnected": "Oyuncu {green}{0}{default} artÄ±k baÄŸlÄ± deÄŸil!",
+    "Chat.MultipleTargetFound": "AdÄ± {green}{0}{default} olan birden fazla oyuncu bulundu!"
 }
+
+
