--- a/lang/Report Module/en.json
+++ b/lang/Report Module/en.json
@@ -20,7 +20,7 @@
     "Chat.TargetNotFound": "A player named {green}{0}{default} was not found!",
     "Chat.TargetNotConnected": "Player {green}{0}{default} is no longer connected!",
     "Chat.MultipleTargetFound": "Multiple players were found with the name {green}{0}{default}!",
-    "Chat.AdminReportSend": "{darkred}[Absynthium - CallAdmin]{default} Player {green}{0}{default} reported player {darkblue}{1}{default} (Reason: {darkred}{2}{default})",
+    "Chat.AdminReportSend": "{darkred}[REPORT]{default} Player {green}{0}{default} reported player {darkblue}{1}{default} (Reason: {darkred}{2}{default})",
     "Chat.ReportSolved": "The report has been set as resolved.",
     "Chat.NoReportsFound": "No Reports Found!",
     "Menu.ReportsList": "List of Reports ({0})",
